# pylib

./: .coverage  .gitignore  Makefile  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
proto/: patch.py  projects.proto  threads.proto
pylib/: __init__.py
pylib/postgres/: __init__.py
pylib/postgres/migrations/: 0_create_tables.down.sql  0_create_tables.up.sql
pylib/proto/: projects_pb2.py  projects_pb2_grpc.py  threads_pb2.py  threads_pb2_grpc.py
pylib/service/: __init__.py  grpc.py  http.py
pylib/services/: auto_migrate.py  grpc.py  http.py
pylib/testutil/: postgres.py
src/postgres/: __init__.py
src/pylib/postgres/: __init__.py
src/pylib/postgres/migrations/: 0_create_tables.down.sql  0_create_tables.up.sql
src/pylib/proto/: projects_pb2.py
tests/: test_postgres.py
tests/fixtures/migrations/: 0_examples.up.sql
