[metadata]
name = pylib
version = 0.0.1
author = Alice Xia
author_email = miss.alice.xia@gmail.om
description = All your Python Services need
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/missAliceXia/pylib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src